Commit ID: MasterMind-08 "Score"

--- a/Mastermind/Mastermind/MainWindow.xaml
+++ b/Mastermind/Mastermind/MainWindow.xaml
@@ -18,6 +18,7 @@
             <Button x:Name="ControlButton" Content="Poging" Height="40" Width="150"  Background="#832B00" FontSize="16" FontFamily="Nirmala UI Semilight" Click="ControlButton_Click"  />
             <TextBox x:Name="cheatCode" Width="180" Height="48"  Visibility="Hidden" HorizontalAlignment="Left" MouseDown="kleur_MouseDown"/>
             <Label x:Name="timerCounter" Width="150" Height="48" HorizontalAlignment="Right"/>
+            <Label x:Name="scoreLabel" Width="100" Height="48" HorizontalAlignment="Right"/>
         </Grid>
         <StackPanel x:Name="historyPanel" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="790" Height="765" Background="Silver" />
     </StackPanel>
