--- a/Mastermind/Mastermind/MainWindow.xaml
+++ b/Mastermind/Mastermind/MainWindow.xaml
@@ -5,7 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mastermind"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="800" Background="Silver" KeyDown="cheatCode_KeyDown">
+        Title="MainWindow" Height="1000" Width="800" KeyDown="cheatCode_KeyDown">
+    <Window.Background>
+        <ImageBrush ImageSource="/Resources/pexels-instawally-176851.jpg" />
+    </Window.Background>
+
     <StackPanel>
         <Grid>
             <UniformGrid Rows="4" Columns="4" Margin="5">
@@ -17,10 +21,10 @@
             </UniformGrid>
             <Button x:Name="ControlButton" Content="Poging" Height="40" Width="150"  Background="#832B00" FontSize="16" FontFamily="Nirmala UI Semilight" Click="ControlButton_Click"  />
             <TextBox x:Name="cheatCode" Width="180" Height="48"  Visibility="Hidden" HorizontalAlignment="Left" MouseDown="kleur_MouseDown"/>
-            <Label x:Name="timerCounter" Width="150" Height="48" HorizontalAlignment="Right"/>
-            <Label x:Name="scoreLabel" Width="100" Height="48" HorizontalAlignment="Right"/>
+            <Label x:Name="timerCounter" Width="150" Height="48" HorizontalAlignment="Right" Background="WhiteSmoke"/>
+            <Label x:Name="scoreLabel" Width="100" Height="48" HorizontalAlignment="Right" Background="GhostWhite"/>
         </Grid>
-        <StackPanel x:Name="historyPanel" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="790" Height="765" Background="Silver" />
+        <StackPanel x:Name="historyPanel" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="790" Height="765" />
     </StackPanel>
-
 </Window>
+
